# media-gatekeeper

./: .gitignore  CLAUDE.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
docs/plans/: 2026-01-31-n3ms-media-library-design.md  2026-01-31-n3ms-media-library-implementation.md
scripts/: download-ffmpeg.sh  download-ytdlp.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: creators.rs  credentials.rs  download.rs  feed_items.rs  metadata.rs  mod.rs  notifications.rs  search.rs  settings.rs  shell.rs  sources.rs  sync.rs  warehouse.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/models/: app_settings.rs  creator.rs  credential.rs  feed_item.rs  mod.rs  source.rs  warehouse_item.rs
src-tauri/src/services/: mod.rs  patreon.rs  sidecar.rs  youtube.rs
src-tauri/src/workers/: download_manager.rs  metadata_worker.rs  mod.rs  sync_manager.rs
src/components/creators/: CreateCreatorDialog.tsx  CreatorCard.tsx
src/components/credentials/: AddCredentialDialog.tsx  index.ts  (+1 more)
src/hooks/: useAppSettings.ts  useBassBoost.ts  useCreators.ts  useCredentials.ts  useDownloadEvents.ts  useFeedItems.ts  useMetadataEvents.ts  useSearch.ts  useSources.ts  useSyncEvents.ts  useTheme.ts  useVisibleItems.ts  useWarehouseItems.ts
src/lib/: tauri.ts  utils.ts
src/pages/: CreatorList.tsx  CreatorView.tsx  Settings.tsx
src/types/: app-settings.ts  creator.ts  credential.ts  download.ts  feed-item.ts  search.ts  source.ts  warehouse-item.ts
(+19 files in other folders)
